--- a/api/package.json
+++ b/api/package.json
@@ -14,7 +14,9 @@
     "dotenv": "^17.2.1",
     "express": "^4.19.2",
     "googleapis": "^155.0.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-microsoft": "^1.0.0",
@@ -24,6 +26,7 @@
     "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^20.12.12",
     "prisma": "^6.13.0",
     "ts-node-dev": "^2.0.0",
